Changed CSS styles on mobile to remove resizing bug

--- a/Assets/WebGLTemplates/ETX/TemplateData/swv_lx_3.css
+++ b/Assets/WebGLTemplates/ETX/TemplateData/swv_lx_3.css
@@ -61,7 +61,7 @@ header {
     width: 8%;
     height: 100%;
     color: black;
-    background-color: black !important; /*Background color overwritten by rel css file*/
+    background-color: black; /*Background color overwritten by rel css file*/
     border: 2px solid #1753b5;;
     outline: none;
     position: relative;
@@ -76,22 +76,22 @@ header {
     /*To do: change text color to white*/
     content: 'Menu';
     text-indent: 0;
- 	display: block;
- 	color: white;
-  	line-height: 0;
-  	position: fixed;
-  	top: 2.75%;
-  	right: 2.5%;
-  	font-size: large;
+    display: block;
+    color: white;
+    line-height: 0;
+    position: fixed;
+    top: 2.75%;
+    right: 2.5%;
+    font-size: large;
 }
 
 /*
 * Specific style for landscape mobile
 */
 @media only screen
-	and (max-device-width: 850px) 
-	and (orientation: landscape) {
-	.headerContainer .wrapper .nameScoreButtonWrapper .optionsToggle::after {
+    and (max-device-width: 850px) 
+    and (orientation: landscape) {
+    .headerContainer .wrapper .nameScoreButtonWrapper .optionsToggle::after {
     /*
     background: url(https://nmbruce.github.io/TemplateData/Menu.png) no-repeat;
     background-size: 100% 100%;
@@ -99,16 +99,15 @@ header {
     /*To do: change text color to white*/
     content: 'Menu';
     text-indent: 0;
- 	display: block;
- 	color: white;
-  	line-height: 0;
-  	position: fixed;
-  	top: 3%;
-  	right: 1.5%;
-  	font-size: large;
+    display: block;
+    color: white;
+    line-height: 0;
+    position: fixed;
+    top: 3%;
+    right: 1.5%;
+    font-size: large;
+    }
 }
-
-	}
 
 .icon-reorder {
     visibility: hidden;
@@ -441,6 +440,24 @@ aside.minimized .navigationToggle:focus {
     top: -0px;
     right: 0px;
 }
+
+/*
+* Specific style for landscape mobile to remove resizing bug
+*/
+@media only screen
+    and (max-device-width: 850px) 
+    and (orientation: landscape) {
+    .mainView .lessonView {
+        width: 100% !important;
+        height: 100% !important;
+        position: static !important;
+        top: 0 !important;
+        bottom: 0 !important;
+        left: 0 !important;
+        right: 0 !important;
+    }
+}
+
 .mainView .feedbackContainer .bottomContainer .toggleFeedbackBtn {
     width: 0px;
     height: 0px;
@@ -496,15 +513,22 @@ aside.minimized .navigationToggle:focus {
     bottom: 10% !important;
     right: 10% !important;
 }
-/*  
-.simIFrame .stageContainer #stage-stage .content {
-    position: absolute !important;
-    top: 50% !important;
-    left: 50% !important;
-    margin: -275px 0 0 -450px !important;
-    box-shadow: none !important
-}   
+
+/*
+* Specific style for landscape mobile to remove resizing bug
 */
+@media only screen
+    and (max-device-width: 850px) 
+    and (orientation: landscape) {
+    .simIFrame .stageContainer #stage-stage .content {
+    position: fixed !important;
+    top: 100% !important;
+    left: 100% !important;
+    margin: 0px 0 0 -0px !important;
+    box-shadow: none !important
+    } 
+}
+
 .simIFrame .checkContainer {
     position: absolute !important;
     height: 0px !important;
@@ -537,6 +561,23 @@ aside.minimized .navigationToggle:focus {
     height: 100% !important;
 }
 
+/*
+* Specific style for landscape mobile to remove resizing bug
+*/
+@media only screen
+    and (max-device-width: 850px) 
+    and (orientation: landscape) {
+    .simIFrame iframe#simIFrame {
+    position: fixed !important;
+    width: 100% !important;
+    height: 100% !important;
+    top: 0 !important;
+    bottom: 0 !important;
+    left: 0 !important;
+    right: 0 !important;
+    }
+}
+
 .simIFrame .centerStage {
   /*position: fixed !important;*/
   top: 50% !important;
@@ -548,7 +589,18 @@ aside.minimized .navigationToggle:focus {
   margin-left: auto;
   margin-right: auto;
 }
-
+/*
+* Specific style for landscape mobile to remove resizing bug
+*/
+@media only screen
+    and (max-device-width: 850px) 
+    and (orientation: landscape) {
+    .simIFrame .anchored {
+      position: inherit !important;
+      margin-left: 0px !important;
+      margin-right: 0px !important;
+    }
+}
 
 header .optionsPanel .option.logoutOption {
     display: none!important
